--- a/app_manifest.deploy-test.yml
+++ b/app_manifest.deploy-test.yml
@@ -1,25 +1,15 @@
-# for deploy test environment
+# for deploy
 display_information:
-  name: esa-assistant-test
-  description: esa
-  background_color: "#229c4b"
+  name: esa-assistant
+  description: esa assistant
 features:
   app_home:
     home_tab_enabled: true
     messages_tab_enabled: false
     messages_tab_read_only_enabled: true
   bot_user:
-    display_name: esa
-    always_online: false
-  shortcuts:
-    - name: Run sample shortcut
-      type: global
-      callback_id: sample_shortcut_id
-      description: Runs a sample shortcut
-  slash_commands:
-    - command: /sample-command
-      description: Runs a sample command
-      should_escape: false
+    display_name: esa-assistant
+    always_online: true
 oauth_config:
   redirect_urls:
   scopes:
@@ -34,6 +24,6 @@ settings:
       - app_mention
   interactivity:
     is_enabled: true
-  org_deploy_enabled: true
+  org_deploy_enabled: false
   socket_mode_enabled: true
   token_rotation_enabled: false
