--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
     "@types/express": "5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "24.5.2",
+    "jest": "^30.1.3",
     "nodemon": "3.1.10",
+    "ts-jest": "^29.4.4",
     "ts-node": "10.9.2",
     "typescript": "5.9.2"
   },
