--- a/app_manifest.local.yml
+++ b/app_manifest.local.yml
@@ -14,8 +14,12 @@ oauth_config:
   scopes:
     bot:
       - channels:history
+      - channels:read
       - chat:write
       - app_mentions:read
+      - groups:read
+      - mpim:read
+      - im:read
 settings:
   event_subscriptions:
     bot_events:
