--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
+    "@slack/types": "2.19.0",
     "@types/express": "5.0.6",
     "@types/jest": "30.0.0",
     "@types/node": "24.5.2",
