--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "lint": "biome lint ./src",
     "lint-fix": "biome lint fix --write ./src",
     "check-fix": "biome check --write ./src",
-    "test": "jest"
+    "test": "jest",
+    "mastra:dev": "mastra dev",
+    "mastra:build": "mastra build",
+    "mastra:start": "mastra start"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@google/genai": "1.25.0",
+    "@mastra/core": "0.24.9",
     "@slack/bolt": "4.6.0",
     "axios": "1.13.2",
     "dotenv": "17.2.3",
@@ -24,6 +28,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
+    "@slack/types": "2.19.0",
     "@types/express": "5.0.6",
     "@types/jest": "30.0.0",
     "@types/node": "24.5.2",
