--- a/app_manifest.deploy.yml
+++ b/app_manifest.deploy.yml
@@ -20,11 +20,13 @@ oauth_config:
       - groups:read
       - mpim:read
       - im:read
+      - reactions:read
 settings:
   event_subscriptions:
     bot_events:
       - app_home_opened
       - app_mention
+      - reaction_added
   interactivity:
     is_enabled: true
   org_deploy_enabled: false
